Fixed spacing issues in the form

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,18 @@
-fieldset {
+.journalForm {
+    display: flex;
+    flex-basis: 33%;
+}
+
+.fieldsetForm {
     display: flex;
     flex-direction: column;
-    flex-basis: 33%;
+}
+
+#submit {
+    margin: 1em 0em 0em 0em;
+}
+
+.formLabel {
+    margin: 1em 0em 0em 0em;
+    font-weight: bold;
 }
